# AlertaDengue

./: .containers-sugar.yaml  .dockerignore  .env.tmpl  .env.tpl  .env_default.tpl  .env_episcanner.tpl  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  .sugar.yaml  CHANGELOG.md  CONTRIBUTING.md  Comandos_20210630.txt  Dockerfile  Dockerfile-celery  Dockerfile-flower  Dockerfile-mapserver  Dockerfile-postgres  MANIFEST.IN  MANIFEST.in  Makefile  README.md  README_MAPSERVER.md  REDEMET_REMOVAL_PLAN.md  docker-compose.yml  dockerfile  dockerfile-demo-DB  env.tpl  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml  environment-dev.yml  environment.yml  example_env_file  exec_in_virtualenv.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_celery_worker.sh  (+5 more)
.circleci/: config.yml
.envs/: .env.tpl
.github/: ISSUE_TEMPLATE.md
.github/workflows/: linux.yml  release.yaml
AlertaDengue/: MANIFEST.IN  Makefile  __init__.py  environment-dev.yml  environment.yml  load.py  manage.py  pyproject.toml  requirements-conda.txt  requirements-dev.txt  requirements.txt  run_celery_worker.sh  runwsgi.sh  setup.cfg  setup.py
AlertaDengue/AlertaDengue/: .directory  __init__.py  celery.py  example-settings.ini  settings.py  settings_test.py  urls.py  views.py  wsgi.py
AlertaDengue/ad_main/: __init__.py  celery.py  celery_settings.py  celeryapp.py  settings.py  test_settings.py  typed_settings.py  urls.py  wsgi.py
AlertaDengue/api/: db.py  models.py  routers.py  settings.py  urls.py  views.py
AlertaDengue/common/: admin.py  mailing_partner.py  models.py  tests.py
AlertaDengue/core/: models.py
AlertaDengue/dados/: admin.py  charts.py  dbdata.py  episem.py  geotiff.py  geoutils.py  info_states.py  maps.py  mapserver_utils.py  models.py  report.py  settings.py  tasks.py  technical_reports.py  tests.py  urls.py  views.py
AlertaDengue/data/: Rt.csv  STsinan.csv  alertaAPS.csv  dengueclimatw2010-2013.csv  municipalities.json
AlertaDengue/dbf/: admin.py  apps.py  collector.py  db.py  forms.py  mailing_partner.py  models.py  pysus.py  sinan.py  tasks.py  tests.py  urls.py  utils.py  validation.py  validations.py  views.py
AlertaDengue/forecast/: admin.py  models.py  urls.py
AlertaDengue/gis/: geodf.py  geotiff.py  mapfile.py  settings.py
AlertaDengue/ingestion/: CONTRIBUTING.md  README.md  admin.py  apps.py  models.py  schemas.py  services.py  sinan_parsing.py  sinan_specs.py  sources.py  tasks.py  types.py  utils.py
AlertaDengue/manager/: router.py
AlertaDengue/static/: .directory  cap_sms.geojson  exp_PontosUnidadesBasicasSaudeMRJ2014wgs84.js  rio_aps.geojson
AlertaDengue/templates/: base.html  bootstrap.html  manifest.json  my_bootstrap3_base.html  my_bootstrap4_base.html
AlertaDengue/tests/: conftest.py  test_utils.py
AlertaDengue/upload/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
ci/: _restore_db.sh  restore.sh  settings-demo.ini
conda/: base.yaml  dev.yaml  environment.yaml  prod.yaml  requirements.txt
config/: alerta_dengue.conf  alerta_dengue_nginx.conf  memcached.conf  sources.list
containers/: compose-base.yaml  compose-dev.yaml  compose-minio.yaml  compose-nextjs.yaml  compose-pgbackrest-restore.yaml  compose-pgbackrest.yaml  compose-prod.yaml  compose-staging.yaml  compose.yaml  entrypoint.sh
containers/celery/: run.sh
containers/group1/: compose.yaml
containers/group2/: compose.yaml
containers/nextjs/: Dockerfile
containers/pgbackrest/: Dockerfile  README.md  howtouse.md  pgbackrest-dev.conf  pgbackrest-prod.conf  pgbackrest-staging.conf  pgbackrest.conf.template  refresh_staging.py  render_config.py  wait_for_postgres.sh
containers/postgres/: Dockerfile
containers/scripts/: celery.sh  cronjob  crontab_install.sh  crontab_setup.sh  entrypoint.sh  export-env.sh  grant-roles-readonly.sh  healthcheck.sh  poetry-install.sh  run_scripts.sh  run_services.sh  runbeat.sh  runcelery.sh  runwsgi.sh  services_run.sh  test.sh
containers/web/: Dockerfile  Dockerfile-base  Dockerfile-prod
dev_dumps/: .gitignore
docker/: Dockerfile  Dockerfile-base  Dockerfile-celery  Dockerfile-dev  Dockerfile-flower  Dockerfile-mapserver  Dockerfile-postgres  Dockerfile-web  compose-base.yaml  compose-dev.yaml  compose-prod.yaml  cron-sendmail  cron-tasks  docker-compose.yml  entrypoint.sh  prepare_permission.sh  staging-compose.yml  test.sh
docker/postgres/: Dockerfile
docker/postgres_setup/: 00-infodengue_roles.sql  01-alter_password.sh  01-create_infodengue_db.sh  entrypoint.sh
docker/sql/: 167-episem.sql  create_hist_uf_diseases_view.sql  create_historico_casos.sql  create_table_historico_alerta_zika.sql  (+3 more)
docs/: deploying_to_staging_environment.md  layout-refactor-2026-06-29.md  sinan-ingestion.md  unused-volume-path-cleanup-plan.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
mapfiles/: .gitignore
notebooks/: API-Python-en.ipynb  API.ipynb  DB_DEMO.ipynb  Essay.ipynb  Forecast.ipynb  Ibis-ReportState-compare_data.ipynb  Ibis-ReportState-read_disease_data.ipynb  Image-Processing.ipynb  MapServer-DOC.ipynb  Mapserver-City.ipynb  Mapserver-Meteorological-Images-Leaflet.ipynb  Mapserver-Meteorological-Images.ipynb  Mapserver-Rio-de-Janeiro-with-Raster-Images.ipynb  Mapserver-Rio-de-Janeiro.ipynb  Mapserver.ipynb  Migration4HTML_Report.ipynb  Raster-Change-Resolution.ipynb  Raster-Meteorological-Images.ipynb  internal_notifications_api_python.ipynb  internal_notifications_api_r.ipynb  rasterio-fiona.ipynb
postgres_setup/: 00-infodengue_roles.sql  01-alter_password.sh  01-create_dengue_db.sh
scripts/: audit-retired-storage-paths.sh  install-deps.sh  install-dev.sh  install-prod.sh  run-mypy-precommit.sh  run-prettier-precommit.sh  run-vulture.py
sql/: 167-alter_table_regional_saude.sql  167-update_regional_saude.sql  191-1-episem2date.sql  alter_table_regional_saude_issue167.sql  create_historico_casos.sql  create_table_forecast.sql  episem.sql
tests/: test.sh  test_pgbackrest_refresh.py  test_render_config.py
(+446 files in other folders)
