[tool.poetry]
name = "alertadengue"
version = "4.2.5"  # changed by semantic-release
description = "AlertaDengue Package"
authors = ["Flavio Codeco Coelho <fccoelho@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"
repository = "https://github.com/AlertaDengue/AlertaDengue"
homepage = "https://github.com/AlertaDengue/AlertaDengue"
packages = [
    { include = "ad_main/*.py", from = "AlertaDengue" },

]

[tool.poetry.dependencies]
celery = "^5.2.6"
dask = "^2023.12.1"
dbfread = "^2.0.7"
dj-static = "^0.0.6"
django = "^3.2.23"
django-bootstrap4 = "^22.1"
django-celery-results = "^2.5.1"
django-chunked-upload = "<2.0.0"
django-cprofile-middleware = "^1.0.5"
django-leaflet = "^0.28.2"
django-pymemcache = "^1.0.0"
fastparquet = ">=2024.2.0"
fiona = ">=1.8.21,<1.10.0"
geojson = "^2.5.0"
geopandas = "^0.12.0"
geopy = "^2.2.0"
gunicorn = "^20.1.0"
ibis-framework = {extras = ["postgres"], version = "^9.0.0"}
loguru = "^0.7.0"
plotly = "^5.11.0"
pyproj = "^3.3.0"
python = ">=3.9,<3.11"
python-dotenv = "^1.0.0"
python-memcached = "^1.59"
rasterio = "^1.2.10"
simpledbf = "^0.2.6"
tables = "^3.7.0"
sqlglot = ">=23.4,<23.13"
altair = "^5.2.0"
watchdog = "^3.0.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.1"
django-redis = "^5.4.0"
episcanner-downloader = { git = "https://github.com/AlertaDengue/episcanner-downloader", tag = "1.0.11"  }
epiweeks = "^2.3.0"
duckdb = "^0.9.2"
urllib3 = "1.26.15"
pyarrow = "^11.0.0"
lmfit = "^1.1.0"
pandas = ">=2.1.0"
psycopg2 = "^2.9.9"
minio = "^7.2.5"
sentry-sdk = ">= 1.45.0, < 2.0.0"
pyocclient = "^0.6"
humanize = "^4.11.0"
chardet = "^5.2.0"
sqlalchemy = ">=1.4.54,<2.0"
django-pwa = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
compose-go = "^2.20.2"
django-extensions = "^3.2.3"
django-maintenance-mode = "^0.16.3"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
bpython = "^0.24"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 79
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | migrations/*
)/
'''

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    'tests/',
]

# [mypy.plugins.django-stubs]
# django_settings_module = AlertaDengue.ad_main.settings

[[tool.mypy.overrides]]
module = [
  "requests",
]
ignore_missing_imports = true
