[tool.poetry]
name = "alertadengue"
version = "4.18.0"  # changed by semantic-release
description = "AlertaDengue Package"
authors = ["Flavio Codeco Coelho <fccoelho@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"
repository = "https://github.com/AlertaDengue/AlertaDengue"
homepage = "https://github.com/AlertaDengue/AlertaDengue"
packages = [
    { include = "ad_main/*.py", from = "AlertaDengue" },
]

[tool.poetry.dependencies]
celery = "^5.2.6"
dask = "^2023.12.1"
dbfread = "^2.0.7"
dj-static = "^0.0.6"
django-bootstrap4 = "^22.1"
django-celery-results = "^2.5.1"
django-cprofile-middleware = "^1.0.5"
django-leaflet = "^0.28.2"
django-pymemcache = "^1.0.0"
fastparquet = ">=2024.2.0"
fiona = ">=1.8.21,<1.10.0"
geojson = "^2.5.0"
geopandas = "^0.13.0"
geopy = "^2.2.0"
gunicorn = "^22.0.0"
loguru = "^0.7.0"
plotly = "^5.11.0"
pyproj = "^3.3.0"
python = ">=3.11,<3.12"
python-dotenv = "^1.0.0"
python-memcached = "^1.59"
rasterio = "^1.2.10"
simpledbf = "^0.2.6"
tables = "^3.7.0"
sqlglot = ">=23.4,<23.13"
watchdog = "^3.0.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.1"
django-redis = "^5.4.0"
epiweeks = "^2.3.0"
episcanner-downloader = { git = "https://github.com/AlertaDengue/episcanner-downloader", tag = "1.0.12" }
duckdb = "^0.9.2"
urllib3 = "1.26.15"
pyarrow = ">=15,<16"
lmfit = "^1.1.0"
pandas = ">=2.1.0"
psycopg2-binary = "2.9.9"
minio = "^7.2.5"
sentry-sdk = ">= 1.45.0, < 2.0.0"
pyocclient = "^0.6"
humanize = "^4.11.0"
chardet = "^5.2.0"
sqlalchemy = ">=1.4.54,<2.0"
django-pwa = "^2.0.1"
numpy = "<2"
django = "5.2.11"
distlib = "^0.4.0"
virtualenv = "^21.2.0"
django-maintenance-mode = "0.16.3"
pydantic = "^2.12.5"
djangorestframework = "^3.16.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
black = "^22.12.0"
compose-go = "^2.20.2"
django-extensions = "^3.2.3"
django-stubs = { version = "5.2.9", extras = ["compatible-mypy"] }
django-stubs-ext = "5.2.9"
djlint = "^1.36.4"
flake8 = "^6.0.0"
isort = "^5.11.4"
mccabe = "^0.7.0"
mypy = "^1.18.2"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-django = "^4.12.0"
bpython = "^0.24"
ruff = "^0.12.0"
vulture = "^2.14"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py311"
fix = true
force-exclude = true
src = ["AlertaDengue"]
exclude = [
    "docs",
    "node_modules",
    "frontend/.next",
    "frontend/node_modules",
    "build",
    "dist",
    "staticfiles",
    "AlertaDengue/dados/migrations",
    "AlertaDengue/ingestion/migrations",
]

[tool.ruff.lint]
select = ["F", "I001", "RUF", "YTT"]
ignore = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = [
    "AlertaDengue/tests",
    "AlertaDengue/api/tests",
    "AlertaDengue/dados/tests",
    "AlertaDengue/gis/tests",
    "AlertaDengue/dados/migrations",
    "AlertaDengue/ingestion/migrations",
]

[tool.vulture]
paths = [
    "AlertaDengue/ad_main",
    "AlertaDengue/api",
    "AlertaDengue/dados",
    "AlertaDengue/gis",
    "AlertaDengue/ingestion",
    "AlertaDengue/manager",
]
exclude = [
    "AlertaDengue/*/migrations/*.py",
    "AlertaDengue/*/tests/*.py",
    "AlertaDengue/tests/*.py",
]
ignore_names = [
    "urlpatterns",
    "app_name",
    "default_app_config",
]
min_confidence = 80

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
files = [
    "AlertaDengue/ad_main",
    "AlertaDengue/api",
    "AlertaDengue/dados",
    "AlertaDengue/gis",
    "AlertaDengue/ingestion",
    "AlertaDengue/manager",
]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    '^AlertaDengue/tests/',
    '^AlertaDengue/.*/tests/',
    '^AlertaDengue/.*/migrations/',
]

[tool.django-stubs]
django_settings_module = "ad_main.settings.testing"

[[tool.mypy.overrides]]
module = [
    "requests",
]
ignore_missing_imports = true

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 79
format_css = true
format_js = true
custom_blocks = "raw"
include = "H017,H030"
exclude = ".git,node_modules,frontend/.next,docs"

[tool.djlint.html]
indent_size = 2
max_preserve_newlines = 2

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ad_main.settings.testing"
python_files = ["test_*.py", "*_test.py", "tests.py"]
markers = [
  "django_db: uses the Django database",
]
addopts = "-ra"

filterwarnings = [
  "ignore:The 'shapely\\.geos' module is deprecated.*:DeprecationWarning",
  "ignore:invalid escape sequence.*:DeprecationWarning",
]
