[metadata]
license-file = LICENSE

[flake8]
max-line-length = 79
exclude =
    settings.py
    local_settings.py
    */migrations/*

[tool:pytest]
# DJANGO_SETTINGS_MODULE = ad_main.test_settings
# addopts = -v -p no:warnings --migrations --reuse-db --cov=. --no-cov-on-fail
python_paths = .
# -- recommended but optional:
python_files = tests.py test_*.py *_tests.py
# django_find_project = false
